sandbox/output
StringCalculator.java:6: error: cannot find symbol
            if (arg.contains(",")) {
                ^
  symbol:   variable arg
  location: class StringCalculator
1 error
